Fix the font and white space on property page [Fixes #167188483]

--- a/UI/property.css
+++ b/UI/property.css
@@ -147,10 +147,14 @@ a.sitename, a:visited.sitename {
 }
 .specs li {
 
-    display: inline-block;
-  font-size: 35px;
+  display: inline-block;
+  font-size: 20px;
   padding: 20px;
 
+}
+
+#desc{
+  font-size: 18px;
 }
 
 .submit-btn {
